# nx-telegram-bot

./: .drone.yml  .pre-commit-config.yaml  Dockerfile  README.md  message_drone.tpl  message_drone_file.tpl  pyproject.toml
drone_templates/: message_drone_deploy.tpl  message_drone_docker_build.tpl  message_drone_test.tpl
nx_telegram_bot/: config.py  main.py  test.py
tests/: test_nx_telegram_bot.py
